@@ -3,6 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- replace with lookahead/lookbehind doesn't work
 - don't show 'new directory' in favorites:
 - jedit -background -nogui && jedit -norestore opens "Untitled 2"
 - need a new jEditLauncher
